--- a/getir/Base.lproj/Main.storyboard
+++ b/getir/Base.lproj/Main.storyboard
@@ -99,38 +99,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAm-2H-UBv">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="aAm-2H-UBv">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R7q-jP-XbJ">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="7ND-FV-rl0">
-                                                <rect key="frame" x="33" y="32" width="309" height="136"/>
+                                                <rect key="frame" x="33" y="32" width="309" height="148"/>
                                                 <subviews>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="nereden" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WfS-g9-Oaa">
-                                                        <rect key="frame" x="0.0" y="0.0" width="309" height="36"/>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nereden" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WfS-g9-Oaa">
+                                                        <rect key="frame" x="0.0" y="0.0" width="309" height="40"/>
                                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="36" id="oPZ-Ly-RWS"/>
+                                                            <constraint firstAttribute="height" constant="40" id="oPZ-Ly-RWS"/>
                                                         </constraints>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="nereye" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UAD-La-PVi">
-                                                        <rect key="frame" x="0.0" y="50" width="309" height="36"/>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nereye" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UAD-La-PVi">
+                                                        <rect key="frame" x="0.0" y="54" width="309" height="40"/>
                                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="paket ağırlığı" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TMZ-s8-qfS">
-                                                        <rect key="frame" x="0.0" y="100" width="309" height="36"/>
+                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Paket ağırlığı (kg)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TMZ-s8-qfS">
+                                                        <rect key="frame" x="0.0" y="108" width="309" height="40"/>
                                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -139,21 +139,21 @@
                                                     <constraint firstItem="TMZ-s8-qfS" firstAttribute="height" secondItem="UAD-La-PVi" secondAttribute="height" id="knW-yp-YS9"/>
                                                 </constraints>
                                             </stackView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paketi göndermek istediğin tarihin başlangıç tarihini ve son günü girebilirsin" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yr-BO-J26">
-                                                <rect key="frame" x="33" y="188" width="309" height="38.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paketi göndermek istediğin tarihin başlangıç tarihini ve son günü girebilirsin" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yr-BO-J26">
+                                                <rect key="frame" x="33" y="204" width="309" height="38.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Başlangıç tarihi (Opsionel)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7EC-jN-zgT">
-                                                <rect key="frame" x="33" y="234.5" width="309" height="36"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Başlangıç tarihi (Opsiyonel)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7EC-jN-zgT">
+                                                <rect key="frame" x="33" y="256.5" width="309" height="40"/>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Bitiş tarihi" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QAc-2h-8LD">
-                                                <rect key="frame" x="33" y="283" width="309" height="36"/>
+                                                <rect key="frame" x="33" y="309" width="309" height="40"/>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
@@ -165,7 +165,7 @@
                                             <constraint firstItem="QAc-2h-8LD" firstAttribute="leading" secondItem="7EC-jN-zgT" secondAttribute="leading" id="8GE-Pe-9i1"/>
                                             <constraint firstItem="4yr-BO-J26" firstAttribute="trailing" secondItem="TMZ-s8-qfS" secondAttribute="trailing" id="DZB-WT-5KV"/>
                                             <constraint firstItem="7ND-FV-rl0" firstAttribute="leading" secondItem="R7q-jP-XbJ" secondAttribute="leading" constant="33" id="Ddk-75-Qzb"/>
-                                            <constraint firstItem="7EC-jN-zgT" firstAttribute="top" secondItem="4yr-BO-J26" secondAttribute="bottom" constant="8" id="ZDd-oJ-5VT"/>
+                                            <constraint firstItem="7EC-jN-zgT" firstAttribute="top" secondItem="4yr-BO-J26" secondAttribute="bottom" constant="14" id="ZDd-oJ-5VT"/>
                                             <constraint firstItem="QAc-2h-8LD" firstAttribute="height" secondItem="7EC-jN-zgT" secondAttribute="height" id="dRU-ko-wJz"/>
                                             <constraint firstAttribute="trailing" secondItem="7ND-FV-rl0" secondAttribute="trailing" constant="33" id="djl-AV-w9y"/>
                                             <constraint firstItem="QAc-2h-8LD" firstAttribute="trailing" secondItem="7EC-jN-zgT" secondAttribute="trailing" id="g25-F1-caq"/>
@@ -175,7 +175,7 @@
                                             <constraint firstItem="4yr-BO-J26" firstAttribute="leading" secondItem="TMZ-s8-qfS" secondAttribute="leading" id="nys-lZ-GCY"/>
                                             <constraint firstItem="7EC-jN-zgT" firstAttribute="leading" secondItem="4yr-BO-J26" secondAttribute="leading" id="oAh-XA-TCt"/>
                                             <constraint firstItem="QAc-2h-8LD" firstAttribute="top" secondItem="7EC-jN-zgT" secondAttribute="bottom" constant="12.5" id="rSe-WE-5nl"/>
-                                            <constraint firstItem="4yr-BO-J26" firstAttribute="top" secondItem="7ND-FV-rl0" secondAttribute="bottom" constant="20" id="zz2-xX-EQV"/>
+                                            <constraint firstItem="4yr-BO-J26" firstAttribute="top" secondItem="7ND-FV-rl0" secondAttribute="bottom" constant="24" id="zz2-xX-EQV"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -234,7 +234,7 @@
                         <viewLayoutGuide key="safeArea" id="C0V-fC-nE9"/>
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="Iwa-d6-N0D">
-                        <barButtonItem key="rightBarButtonItem" title="    X " style="plain" id="V5I-5l-8z7">
+                        <barButtonItem key="rightBarButtonItem" title="Kapat" style="plain" id="V5I-5l-8z7">
                             <color key="tintColor" name="systemOrangeColor" catalog="System" colorSpace="catalog"/>
                             <connections>
                                 <action selector="dismissButtonTapped" destination="xi0-P9-coI" id="yxo-F4-IFr"/>
@@ -246,6 +246,7 @@
                         <outlet property="endDateTextField" destination="QAc-2h-8LD" id="qDU-Mj-vqM"/>
                         <outlet property="filterButton" destination="nah-gZ-WXB" id="878-eX-tyy"/>
                         <outlet property="fromTextField" destination="WfS-g9-Oaa" id="6zm-wq-kLX"/>
+                        <outlet property="scrollView" destination="aAm-2H-UBv" id="t2P-GR-cnN"/>
                         <outlet property="startDateTextField" destination="7EC-jN-zgT" id="Hge-3g-hAZ"/>
                         <outlet property="toTextField" destination="UAD-La-PVi" id="JEn-kN-hig"/>
                         <outlet property="weightTextField" destination="TMZ-s8-qfS" id="Iyx-Hf-7aM"/>
@@ -254,6 +255,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6We-0s-HDi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4037.5999999999999" y="-1128.4857571214393"/>
+        </scene>
+        <!--Search Place View Controller-->
+        <scene sceneID="rYC-et-Wcl">
+            <objects>
+                <viewController id="fYD-rf-gPZ" customClass="SearchPlaceViewController" customModule="getir" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mEt-rj-chz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Nereye" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0b-TC-fr8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="search" textContentType="location"/>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="systemOrangeColor" catalog="System" colorSpace="catalog"/>
+                        <viewLayoutGuide key="safeArea" id="sYD-gp-mSc"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="lWC-Kr-UQB"/>
+                    <connections>
+                        <outlet property="searchBar" destination="y0b-TC-fr8" id="ux6-kk-4vV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yC9-d1-bTZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4850" y="-1128"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Gqm-Bz-ka7">
