--- a/getir/Views/Cells/State/StateTableViewCell.xib
+++ b/getir/Views/Cells/State/StateTableViewCell.xib
@@ -12,14 +12,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="StateTableViewCell" customModule="getir" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="KGk-i7-Jjw" customClass="StateTableViewCell" customModule="getir" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gaH-OL-y9X">
+                        <rect key="frame" x="8" y="8" width="304" height="133.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="gaH-OL-y9X" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="20n-lU-4Mc"/>
+                    <constraint firstItem="gaH-OL-y9X" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="DtS-Yr-GyU"/>
+                    <constraint firstAttribute="bottom" secondItem="gaH-OL-y9X" secondAttribute="bottom" constant="8" id="h8k-jX-MZT"/>
+                    <constraint firstAttribute="trailing" secondItem="gaH-OL-y9X" secondAttribute="trailing" constant="8" id="jmT-id-fQp"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="containerView" destination="gaH-OL-y9X" id="ZmD-Za-oGt"/>
+            </connections>
+            <point key="canvasLocation" x="34" y="69"/>
         </tableViewCell>
     </objects>
 </document>
