--- a/getir/Views/Cells/State/StateTableViewCell.xib
+++ b/getir/Views/Cells/State/StateTableViewCell.xib
@@ -21,7 +21,7 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gaH-OL-y9X">
                         <rect key="frame" x="8" y="8" width="304" height="133.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     </view>
                 </subviews>
                 <constraints>
