develop: 1. current user id değiştirildi. 2. Travel, Pack ve parent olan ActivityModel eklendi. Digital Ocean'a baglandı. 💃

--- a/getir/Base.lproj/Main.storyboard
+++ b/getir/Base.lproj/Main.storyboard
@@ -259,7 +259,7 @@
         <!--Select Request View Controller-->
         <scene sceneID="CWz-Bm-L01">
             <objects>
-                <viewController id="jjw-Ae-60Z" customClass="SelectRequestViewController" customModule="getir" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="selectRequestVC" id="jjw-Ae-60Z" customClass="SelectRequestViewController" customModule="getir" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ibk-zS-XDP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
